--- a/infra/postgres/postgres.yml
+++ b/infra/postgres/postgres.yml
@@ -10,6 +10,7 @@ services:
     environment:
       POSTGRES_USER: root
       POSTGRES_PASSWORD: faesa123
+      POSTGRES_DB: gabs
 
   adminer:
     image: adminer
